"fixed header on mobile"

--- a/css/tooplate-infinite-loop.css
+++ b/css/tooplate-infinite-loop.css
@@ -192,7 +192,7 @@ blockquote {
 }
 
 .tm-hero-text-container-inner {
-  margin-top: -90px;
+  margin-top: -80px;
 }
 
 .tm-hero-title {
